--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,8 @@
-name: Semantic release
-
-on: push
+name: Publish
+on:
+  push:
+    branches:
+      - "master"
 
 jobs:
   publish:
@@ -18,9 +20,6 @@ jobs:
           node-version: 18
           cache: "npm"
 
-      - name: GitHub Token einstellen für Private packages
-        run: git config --global url."https://${{ secrets.GH_TOKEN }}@github.com/".insteadOf ssh://git@github.com/ # Personal Access Token hinzufügen um Private Github Repos installieren zu können.
-
       # NPM ci mit Cache
       - name: Cache dependencies
         uses: actions/cache@v3
@@ -36,3 +35,12 @@ jobs:
 
       - name: Build
         run: npm run build
+
+      - name: Create Release Pull Request or Publish
+        id: changesets
+        uses: changesets/action@v1
+        with:
+          publish: npx changeset publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
