--- a/package.json
+++ b/package.json
@@ -9,40 +9,9 @@
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup",
-    "semantic-release": "semantic-release",
     "type-check": "tsc --noEmit"
   },
-  "license": "ISC",
-  "plugins": [
-    "@semantic-release/commit-analyzer",
-    "@semantic-release/release-notes-generator",
-    "@semantic-release/changelog",
-    "@semantic-release/github",
-    "@semantic-release/npm",
-    "@semantic-release/git"
-  ],
-  "release": {
-    "branches": [
-      "master",
-      {
-        "name": "pre-*",
-        "prerelease": true
-      }
-    ],
-    "prepare": [
-      "@semantic-release/changelog",
-      "@semantic-release/npm",
-      {
-        "path": "@semantic-release/git",
-        "assets": [
-          "package.json",
-          "package-lock.json",
-          "CHANGELOG.md"
-        ],
-        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
-      }
-    ]
-  },
+  "license": "MIT",
   "packageManager": "npm@9.2.0",
   "repository": {
     "type": "git",
@@ -52,25 +21,23 @@
     "access": "public"
   },
   "dependencies": {
-    "@inquirer/prompts": "^1.2.3",
-    "chalk": "^5.2.0",
-    "inquirer": "^9.1.5",
-    "listr2": "^5.0.8",
+    "@inquirer/prompts": "^3.1.1",
+    "chalk": "^5.3.0",
+    "inquirer": "^9.2.11",
+    "listr2": "^7.0.1",
     "minimist": "^1.2.8",
-    "mongodb": "^5.5.0",
-    "zod": "^3.21.4",
-    "zod-error": "^1.5.0"
+    "mongodb": "^6.1.0",
+    "zod": "^3.22.2",
+    "zod-error": "^1.5.0",
+    "@changesets/cli": "^2.26.2"
   },
   "devDependencies": {
-    "@neuvernetzung/eslint-config-custom": "1.0.1",
-    "@neuvernetzung/tsconfig": "1.0.0",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
+    "@neuvernetzung/eslint-config-custom": "1.1.5",
+    "@neuvernetzung/tsconfig": "1.0.2",
     "@types/inquirer": "^9.0.3",
     "@types/minimist": "^1.2.2",
-    "eslint": "^8.36.0",
-    "semantic-release": "^20.1.3",
-    "tsup": "^6.7.0",
-    "typescript": "^5.0.2"
+    "eslint": "^8.49.0",
+    "tsup": "^7.2.0",
+    "typescript": "^5.2.2"
   }
 }
